update example config

--- a/config.example.ini
+++ b/config.example.ini
@@ -1,5 +1,6 @@
 [database]
 host=mysql.dev
+database=watchtowerdb
 user=watchtower
 password=W@tchT0w3r
 
@@ -20,3 +21,6 @@ realname=Watchtower channel security
 [irc-auth]
 method=password
 password=iamsogoodatpasswords
+
+[irc-channels]
+monitor=#watchtower-dev
